--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   },
   "volta": {
